--- a/Index.html
+++ b/Index.html
@@ -27,19 +27,58 @@
             </div>
             </div>
 
-            <div class="textoprincipal">
-            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
-            </div>
-        </div>
         
         <div class="secciones">
-            <div class="textosecciones"></div>
-            <div class="nosotroshome"></div>
-            <div class="portfoliohome"></div>
+            <div class="nosotrasseccion">
+                <img src="./img/user.svg" />
+                <p>Nosotras</p>
+            </div>
+            <div class="portfolioseccion">
+                <img src="./img/puzzle.svg" />
+                <p>Portfolio</p>
+            </div>
+            <div class="contactoseccion">
+                <img src="./img/edit.svg" />
+                <p>Contacto</p>
+                </div>
         </div>
 
-        <div class="grilla"></div>
+        <div class="portfoliotitulo">
+                Portfolio
+            </div>
 
-        <div class="footer"></div>
+        <div class="grilla">
+            <img src="./img/grilla.png" />
+        </div>
+
+        <div class="footer">
+            <div class="info">
+                <div class="direccion"> Dirección: Av. Mosconi 3115, CABA</div>
+                <div class="telefono"> Teléfono: 1554222354</div>
+                <div class="email"> Email: agosgal@gmail.com</div>
+                <div class="redes"> Social: /agosgal </div>
+            </div>
+            <div class="formulario">
+                <form action="" method="">
+             Nombre y apellido
+             <input type="text" name="nombre">
+             </br>
+            </input>
+             Apellido
+             <input type="text" name="apellido">
+             </br>
+          </input>
+          <form action="" method="">
+             Email
+             <input type="text" name="email">
+             </br>
+            </input>
+             Comentarios
+             <input type="text-area" name="comentarios">
+          </input>
+           <input type="submit" value="Submit">
+        </form>
+            </div>
+        </div>
     </body>
 </html>
