arreglo links mobile

--- a/Index.html
+++ b/Index.html
@@ -31,15 +31,15 @@
         <div class="secciones">
             <div class="nosotrasseccion">
                 <img src="./img/user.svg" />
-                <p>Nosotras</p>
+                <a href="#">Nosotras</a>
             </div>
             <div class="portfolioseccion">
                 <img src="./img/puzzle.svg" />
-                <p>Portfolio</p>
+                <a href="#">Portfolio</a>
             </div>
             <div class="contactoseccion">
                 <img src="./img/edit.svg" />
-                <p>Contacto</p>
+                <a href="#">Contacto</a>
                 </div>
         </div>
 
